# palletfix

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/palletfix/: addresses.cpp  addresses.h  dllmain.cpp  externs.h  globals.h  hooks.cpp  hooks.h  il2cpp.cpp  il2cpp.h  interop.cpp  interop.h  palletfix.cpp  palletfix.h  signatures.h
src/palletfix/hooks/: download.cpp  pallet.cpp  subscriptionfilter.cpp
src/palletfix/il2cpp/: base.h  string.cpp  string.h  version.cpp  version.h
src/palletfix/slz/: barcode.cpp  barcode.h  marrow.cpp  marrow.h  moddownloader.h  pallet.h
src/palletfix/util/: log.cpp  log.h  memory.cpp  memory.h
